fix contrast color

--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -1,7 +1,7 @@
 // https://github.com/twbs/bootstrap/blob/v5.3.2/scss/_variables.scss
 
 $primary: #335eea
-$secondary: #506690
+$secondary: #3d5480
 $black: #161c2d
 $gray: #869ab8
 $gray-dark: #384c74
@@ -15,9 +15,9 @@ $gray-700: #506690
 $gray-800: #384c74
 $gray-900: #1b2a4e
 $success: #42ba96
-$info: #7c69ef
+$info: #6a55e1
 $warning: #fad776
-$danger: #df4759
+$danger: #d52f43
 $light: $gray-200
 $dark: $gray-900
 
@@ -37,7 +37,7 @@ $border-color: $gray-200
 $breadcrumb-font-size: .75rem
 $breadcrumb-margin-bottom: 0
 $breadcrumb-padding-y: px2rem(10)
-$breadcrumb-divider-color: rgba($secondary, .8)
+$breadcrumb-divider-color: rgba($secondary, .9)
 $breadcrumb-item-active-color: $secondary
 
 // Buttons
@@ -83,6 +83,7 @@ $pagination-hover-color: $pagination-active-color
 $pagination-hover-bg: $pagination-active-bg
 $pagination-hover-border-color: $pagination-active-bg
 
+// Spacing
 $spacer: 1.25rem
 
 // Hugolify
